# Prodigy

./: .eslintrc.json  .htaccess  .npmignore  .readthedocs.yaml  CNAME  LICENSE  README.md  about.css  about.html  index.html  index.js  login.html  mkdocs.yml  notes.txt  package-lock.json  package.json  pyproject.toml  requirements.txt  tsconfig.json
docs/: index.md
docs/javascript/: GetPlayerData.md  gameData.md  gameStatus.md  get_requests.md  index.md  player.md  tokenify.md  update_player.md  update_requests.md
docs/python/: gameData.md  gameStatus.md  index.md  player.md  tokenify.md  update_player.md
lib/: GameData.d.ts  GameData.js  PlayerData.d.ts  getGameData.d.ts  getGameData.js  getGameStatus.d.ts  getGameStatus.js  getPlayerData.d.ts  getPlayerData.js  getPlayerFriendRequests.d.ts  getPlayerFriendRequests.js  getPlayerUserID.d.ts  getPlayerUserID.js  index.d.ts  index.js  tokenify.d.ts  tokenify.js  updatePlayerData.d.ts  updatePlayerData.js  updatePlayerFriendRequests.d.ts  updatePlayerFriendRequests.js
prodigy/: __init__.py  gameData.py  gameStatus.py  getAsset.py  get_friend_requests.py  get_userID.py  player.py  prodigy.py  tokenify.py
src/: GameData.ts  PlayerData.ts  getGameData.ts  getGameStatus.ts  getPlayerData.ts  getPlayerFriendRequests.ts  getPlayerUserID.ts  index.ts  tokenify.ts  updatePlayerData.ts  updatePlayerFriendRequests.ts
