[tool.poetry]
name = "prodigy"
version = "1.0.0"
description = "Python Package to Hack Prodigy The Math Game"
authors = ["hostedposted <hostedpostedsite@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.25.1"
beautifulsoup4 = "^4.9.3"
requests-cache = "^0.6.4"
lxml = "^4.6.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
