[tool.poetry]
name = "prodigy-api"
readme = "README.md"
packages = [
    {include = "prodigy"}
]
version = "2.0.1"
description = "Python Package to Hack Prodigy The Math Game"
authors = ["hostedposted <hostedpostedsite@gmail.com>"]
repository = "https://github.com/hostedposted/Prodigy"
documentation="https://prodigy.readthedocs.io/en/latest/"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.25.1"
beautifulsoup4 = "^4.9.3"
requests-cache = "^0.6.4"
lxml = "^4.6.3"

[tool.poetry.dev-dependencies]
mkdocs = "^1.2.1"
mkdocs-material = "^7.1.8"
mkdocs-git-revision-date-localized-plugin = "^0.9.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
